// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataListInput > should display number data list 1`] = `
<DocumentFragment>
  <input
    class=""
    list="list-dltest"
    name="dltest"
    type="number"
  />
  <datalist
    id="list-dltest"
  >
    <option
      value="1"
    >
      option one
    </option>
    <option
      value="2"
    >
      option two
    </option>
  </datalist>
</DocumentFragment>
`;

exports[`DataListInput > should display text data list 1`] = `
<DocumentFragment>
  <input
    class=""
    list="list-dltest"
    name="dltest"
    type="text"
  />
  <datalist
    id="list-dltest"
  >
    <option
      value="1"
    >
      option one
    </option>
    <option
      value="2"
    >
      option two
    </option>
  </datalist>
</DocumentFragment>
`;
